# git-qa

./: .git-qa-config.yaml  .gitignore  setup.cfg  t.py
.dev_tools/: dev-requirements.txt  setup_dev_tools.sh
examples/src/: main.py
git_qa/: __main__.py  config.py  config_parser.py  hook_executor.py  main.py  repo_installer.py  schemas.json
git_qa/cmd/init/: __main__.py  git_qa_installer.py
git_qa/cmd/run/: __main__.py
hooks/isort_5.10.1/: .isort.cfg  entrypoint.sh  install.sh  metadata.json
