[metadata]
name = git-qa
version = 0.0.1
author = Roberto Crespo
description = This is an example project
long_description = This is a longer description for the project
# url = https://medium.com/@gmyrianthous
# keywords = sample, example, setuptools

[options]
python_requires = >=3.7, <4
install_requires = 
    pyyaml>=6.0
    jsonschema>=4.4.0

[options.entry_points]
console_scripts =
    git-qa = git_qa.__main__:main